<resources>
    <string name="app_name">Find My Representatives</string>
    <string name="enter_postal_code">Enter your postal code</string>
    <string name="button_search">Search</string>
    <string name="postal_code_error">%1$s is not a valid postal code.</string>
    <string name="loading_list">LOADING…please wait.</string>
    <string name="invalid_code">This is not a valid Canadian postal code. Please go back.</string>
    <string name="no_results">This postal code is not associated with any representatives according to the API. Please try a different postal code, or finding by device location.</string>
    <string name="invalid_go_back">Go back</string>
    <string name="photo_alt">Image of representative</string>
    <string name="email_alt">Email icon</string>
    <string name="no_internet">There has been an error. You likely have no Internet. Please go back and try again.</string>
    <string name="or">OR</string>
    <string name="use_location">Use my current location</string>
    <string name="location_error">There has been an error with getting your location. Make sure your device location is turned on. Try opening Google Maps and requesting
        your location there to see if it works.</string>
</resources>